@@ -6,6 +6,8 @@
   * Fixed a bug in splitDRX.py that caused the script to die if an --offset was passed in
   * Fixed a bug in lsl.common.mcs that caused binary packed files to be read in incorrectly on 32-bit installs
   * Fixed a bug in lsl.misc.beamformer that caused the beam simulators to fail when running in single-thread mode
+  * Added frequency keywords to the integer delay-and-sum beamformer functions
+  * Fixed a problem with the beam power pattern measured by lsl.misc.beamformer.intBeamShape
 
 0.6.1
   * Added support for DROS metatags in the SESSION_SPC SDF keyword
